# MtaWorldConvertingTools

./: .gitignore  CColLib.cpp  CColLib.h  CGtaDatLoader.h  CIMG.h  CIdeLoader.cpp  CIplLoader.cpp  CIplLoader.h  CLoader.h  CMakeLists.txt  CMapDataWriter.cpp  CMetaWriter.cpp  ILogger.h  README  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: build.yml
resources/: mainwindow.ui
src/: main.cpp
src/gui/: CConvertWorkingThread.h  CGuiTextBrowsertLogger.cpp  CGuiTextBrowsertLogger.h  CLoggerThreadProxy.h  CMainWindow.cpp  CMainWindow.h  mainwindow.cpp
src/logic/: CAbstractLogger.h  CArrayStr.h  CColLib.cpp  CColLib.h  CConverter.cpp  CConverter.h  CGtaDatLoader.cpp  CGtaDatLoader.h  CIMG.cpp  CIMG.h  CIdeLoader.cpp  CIdeLoader.h  CImgRepacker.cpp  CImgRepacker.h  CIplLoader.cpp  CIplLoader.h  CLoader.cpp  CLoader.h  CMapDataWriter.cpp  CMapDataWriter.h  CMetaWriter.cpp  CMetaWriter.h  CPathResolver.cpp  CPathResolver.h  CWriter.cpp  CWriter.h  ILogger.h  SMapObject.h
src/logic/checkers/: CDFF.cpp  CDFF.h  CDFFChecker.cpp  CDFFChecker.h
src/logic/convertors/: CPhysicalDataConvertor.cpp  CPhysicalDataConvertor.h  convertors.cpp  convertors.h
src/logic/loaders/: CGtaDatLoader.cpp  CIdeLoader.cpp  CIdeLoader.h  CIplLoader.cpp  CIplLoader.h  CLoader.cpp  CLoader.h  CObjectDatLoader.cpp  CObjectDatLoader.h  CWaterLoader.cpp  CWaterLoader.h
src/logic/writers/: CImgRepacker.cpp  CImgRepacker.h  CMapDataWriter.cpp  CMapDataWriter.h  CMetaWriter.h  CRegisterWriter.cpp  CRegisterWriter.h  CWriter.cpp  CWriter.h
